--- a/views/Login.hbs
+++ b/views/Login.hbs
@@ -1,5 +1,5 @@
-<include src="./_header.html"></include>
+<include src="./_header.hbs"></include>
 
 This is the login page
 
-<include src="./_footer.html"></include>
+<include src="./_footer.hbs"></include>
