--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <include src="./_bulma.html"></include>
+        <include src="./_bulma.hbs"></include>
     </head>
     <body>
+        <h1>Header:::</h1>
