--- a/views/Home.hbs
+++ b/views/Home.hbs
@@ -1,5 +1,5 @@
-<include src="./_header.html"></include>
+{{> header}}
 
 This is the home page
 
-<include src="./_footer.html"></include>
+{{> footer}}
