I don't remember what I did here, but I am going to overwrite it anyway

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -4,4 +4,5 @@
         <include src="./_bulma.hbs"></include>
     </head>
     <body>
-        <h1>Header:::</h1>
+        <h1>Green Code</h1>
+        <h2>Energy Feedback</h2>
