added nav partial, added nodemon dependency to package.json and it works for editing text in views but not changing styles or anything so I will fix that. Also added multer: ^1.3.1 to package.json to work on adding files to the database

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <include src="./_bulma.hbs"></include>
+        {{> _bulma}}
     </head>
     <body>
-        <h1>Green Code</h1>
-        <h2>Energy Feedback</h2>
+        <h1 class = "title">Green Code</h1>
+        <h2 class = "subtitle">Energy Feedback</h2>
+        {{> _nav}}
