--- a/views/Home.hbs
+++ b/views/Home.hbs
@@ -1,5 +1,28 @@
-{{> _header}}
+<div class="hero is-primary">
+    {{> _header}}
+    <div class="hero-body" style="background-color: rgb(21, 132, 121);">
+        <div class="container" style="text-align: center;">
+            <h1 class="title">
+                Green Code
+            </h1>
+            <h2 class="subtitle">
+                Created by Debbie, Blessing, Aldrin, Eddie
+            </h2>
+        </div>
+    </div>
+</div>
 
-This is the home page
+<h3 class="title" style="text-align:center;"> Welcome </h3>
+   
+  <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+    <h3 class = "title" style="text-align:center;"><strong>Mission</strong></h3>
+    <p style="text-align: center; font-size: 25px;">Our motivation is to make a connection between computer science and energy usage. Thus why we aim to find new methods to motivate the new generation of Computer Science students to learn and create efficient programs. Such as incorporating something like Big O of Energy into the study of Computer Science. 
+</p>
+  </div>
+  <div style="position:relative;">
+    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+      <p style="text-align: center; font-size: 25px;">Let's Build A Better Future.</p>
+    </div>
+  </div>
 
 {{> _footer}}
