--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -6,8 +6,9 @@
         <meta name="google-signin-client_id" content="299497171148-rq9u75899t9ma315tsuur6aiced7romu.apps.googleusercontent.com">
     </head>
     <body>
-        <h1 class = "title">Green Code</h1>
-        <h2 class = "subtitle">Energy Feedback</h2>
+        <br>
+        {{!-- <h1 class = "title">Green Code</h1>
+        <h2 class = "subtitle">Energy Feedback</h2> --}}
         {{> _nav}}
 
         
