Added 'post' and 'get' to insert and retrieve code data to/from DB

--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -1,7 +1,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                <strong>Green Code</strong> by <a href="https://github.com/bitmonst3r/Green-Code">Debborah Meda, Blessing Apkarian, Aldrin Dancel Carlos, Eddie Sanchez</a>. 
+                <strong>Green Code</strong> by <a href="https://github.com/bitmonst3r/Green-Code">Deborah Meda, Blessing Apkarian, Aldrin Dancel Carlos, Eddie Sanchez</a>. 
                 <br>
                 <a href="https://github.com/bitmonst3r/Green-Code">Github</a>
             </p>
