cleaned up LogIn code, added insert query to code.js

--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -47,17 +47,15 @@
           <a class="button is-primary">
             <strong>Sign up</strong>
           </a>
-          
-            <div class="g-signin2" data-onsuccess="onSignIn"></div>
-          
+          <div class="g-signin2" data-onsuccess="onSignIn"></div>
+          <a href="#" onclick="signOut();">
+            <strong>Sign Out</strong>
+          </a>
         </div>
       </div>
     </div>
   </div>
 </nav>
-
-
-<a href="#" onclick="signOut();">Sign out</a>
 
 <script>
   function signOut() {
@@ -65,5 +63,13 @@
     auth2.signOut().then(function () {
       console.log('User signed out.');
     });
+  }
+
+  function onSignIn(googleUser) {
+      var profile = googleUser.getBasicProfile();
+      console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+      console.log('Name: ' + profile.getName());
+      console.log('Image URL: ' + profile.getImageUrl());
+      console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
   }
 </script>
