--- a/views/Login.hbs
+++ b/views/Login.hbs
@@ -1,5 +1,17 @@
-<include src="./_header.html"></include>
+{{> _header}}
 
 This is the login page
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-<include src="./_footer.html"></include>
+
+{{> _footer}}
+
+<script>
+    function onSignIn(googleUser) {
+        var profile = googleUser.getBasicProfile();
+        console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+        console.log('Name: ' + profile.getName());
+        console.log('Image URL: ' + profile.getImageUrl());
+        console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+    }
+</script>
