Profile page, profile route, jquery added to head, google data printed on profile page

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -4,7 +4,9 @@
         {{> _bulma}}
         {{!-- <link rel="shortcut icon" href="\images\logo.png">
         <link rel="icon" type="image/gif" href="\images\logo.png"> --}}
+        <meta charset="utf-8">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
         <meta name="google-signin-client_id" content="299497171148-rq9u75899t9ma315tsuur6aiced7romu.apps.googleusercontent.com">
     </head>
     <body>
