--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -71,5 +71,10 @@
       console.log('Name: ' + profile.getName());
       console.log('Image URL: ' + profile.getImageUrl());
       console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+      $('#UserName').html(profile.getName())
+      $('#UserEmail').html(profile.getEmail())
+
+      $('#UserImage').attr('src', profile.getImageUrl())
   }
 </script>
