--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -1,2 +1,11 @@
+      <footer class="footer">
+        {{!-- <div class="content has-text-centered"> --}}
+            <p>
+                Green Code by <a href="https://github.com/bitmonst3r/Green-Code">Deborah Meda, Blessing Apkarian, Aldrin Dancel Carlos, Eddie Sanchez</a>. 
+                <br>
+                <a href="https://github.com/bitmonst3r/Green-Code">Github</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
