--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,138 @@
+#img_head{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* -webkit-filter: drop-shadow(15px 15px 15px rgb(255, 255, 255)); */
+  filter: drop-shadow(5px 15px 25px rgb(255, 255, 255));
+}
+
 body {
-  padding: 50px;
+  /* padding: 50px; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url("/images/forrest.jpg");
+  background-size: cover;
+  min-height: 1000px;
+  background-repeat: no-repeat;
+}
+ 
+.footer{
+  position:absolute;
+  margin-top: 180px;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  background-color: rgb(0, 0, 0, 0.7);
+  color: white;
+  text-align: center;
 }
 
 a {
   color: #00B7FF;
+} 
+
+.container{
+  margin: auto;
+  background-color: rgb(0, 0, 0, 0.7);
+  width: 500px;
+  height: 333px;
+  top: 100px;
+  /* margin: 7em auto; */
+  border-radius: 1.5em;
+  border-color: rgb(119, 119, 119);
+  border-style: ridge;
+  /* border-radius: 50%;
+  width: 500px;
+  height: 500px; */
 }
+
+#h1-upload{
+  color: beige;
+  text-align: center;
+  position: absolute;
+  top: 10%;
+  left: 31%;
+  font-size: 33px;
+}
+
+#file-js-example{
+  position: absolute;
+  top: 33%;
+  left: 21%;
+}
+
+.pulse{
+  position: absolute;
+  top: 72%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+  background: #58ea00;
+  /* color: #fff; */
+  border-radius: 50%;
+  text-align: center;
+  line-height: 84px;
+  cursor: pointer;
+}
+
+.pulse:before,
+.pulse:after{
+  content: '';
+  display: block;
+  position: absolute;
+  border: 50%;
+  border: 1px solid #58ea00;
+  left: -20px;
+  right: -20px;
+  top: -20px;
+  bottom: -20px;
+  border-radius: 50%;
+  animation: animate 1.5s linear infinite;
+}
+.pulse:after{
+  animation-delay: .5s;
+}
+@keyframes animate{
+  0%{
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  50%{
+    opacity: 1;
+  }
+  100%{
+    transform: scale(1.2);
+    opacity: 0;
+  } 
+}
+
+input.divLink {
+  background-color: #5AEA02;
+  border: none;
+   font-family:Helvetica;
+   font-weight: bold;
+   font-size: 18px;
+   color: white;
+   position: absolute;
+   top: 40%;
+   left: 13%;
+   width: 75%;
+   height: 25%;
+   /* top: 10%; */
+   /* left: 0; */
+   text-decoration: none;
+   z-index: 10;
+   /* raises anchor tag above everything else in div */
+   cursor: pointer;
+}
+
+.loading_bar{
+  color: white;
+  text-align: center;
+  margin: auto;
+  position: absolute;
+  top: 55%;
+  left: 25%;
+  width: 50%;
+}
+
