--- a/views/Home.hbs
+++ b/views/Home.hbs
@@ -1,5 +1,5 @@
-<include src="./_header.html"></include>
+{{> _header}}
 
-This is the home page
+<h1>Home page</h1> 
 
-<include src="./_footer.html"></include>
+{{> _footer}}
