--- a/views/partials/_bulma.hbs
+++ b/views/partials/_bulma.hbs
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
