Working on displaying database info on a page. npm crashes, saying port 3000 already in use, waiting for file changes before start. But I added codeListing.hbs and route.

--- a/views/Profile.hbs
+++ b/views/Profile.hbs
@@ -8,7 +8,7 @@
 
         <div id='UserName' class="pl-6">   </div>
 
-        <div id='UserEmail' class="pl-6">   </div>
+        <div id='UserEmail' name='email' class="pl-6">   </div>
     </div>
 
     <br>    
