uploading a file takes user to code listing page. Nav is fixed to Eddie's Design.

--- a/views/codeListing.hbs
+++ b/views/codeListing.hbs
@@ -1,3 +1,18 @@
+{{> _header}}
+
 {{#each codes}}
     {{codes.submissionId}} {{codes.codeName}} {{codes.codestring}} 
 {{/each}}
+
+<p>aaaaaaaaahhhh</p>
+
+<p>aaaaaaaaahhhh</p>
+<p>aaaaaaaaahhhh</p>
+<p>aaaaaaaaahhhh</p>
+<p>aaaaaaaaahhhh</p>
+<p>aaaaaaaaahhhh</p>
+<p>aaaaaaaaahhhh</p>
+<p>aaaaaaaaahhhh</p>
+
+
+{{> _footer}}
