--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -1,23 +1,16 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-black" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       <img src="\images\logo.png" width="50" height="50">
-    </a>
-
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
     </a>
   </div>
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a href="/" class="button is-primary">
+      <a href="/" class='navbar-item'>
         Home
       </a>
-
-      <a href="upload" class="button is-primary">
+      <a href="upload" class='navbar-item'>
         Upload Code
       </a>
 
@@ -27,15 +20,11 @@
         </a>
 
         <div class="navbar-dropdown">
-          <a class="navbar-item">
+          <a href="/" class="navbar-item">
             About
           </a>
-          <a class="navbar-item">
-            Contact
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Report an issue
+          <a href='https://github.com/bitmonst3r/Green-Code' class="navbar-item">
+            Review Github
           </a>
         </div>
       </div>
@@ -44,11 +33,11 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary">
+          <a class='navbar-item'>
             <strong>Sign up</strong>
           </a>
           <div class="g-signin2" data-onsuccess="onSignIn"></div>
-          <a href="#" onclick="signOut();">
+          <a class='navbar-item' href="#" onclick="signOut();">
             <strong>Sign Out</strong>
           </a>
         </div>
