made it so the user can only see the profile button when they ar signed in

--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -32,25 +32,31 @@
 
     <div class="navbar-end">
       <div class="navbar-item">
-        <div class="buttons">
+        {{!-- <div class="buttons"> --}}
           <a class='navbar-item'>
             <strong>Sign up</strong>
+          </a>
+          <a href="profile" class='navbar-item' id = 'profileB'>
+            Profile
           </a>
           <div class="g-signin2" data-onsuccess="onSignIn"></div>
           <a class='navbar-item' href="#" onclick="signOut();">
             <strong>Sign Out</strong>
           </a>
-        </div>
+        {{!-- </div> --}}
       </div>
     </div>
   </div>
 </nav>
 
 <script>
+  $("#profileB").hide();
+
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
     auth2.signOut().then(function () {
       console.log('User signed out.');
+      $("#profileB").hide();
     });
   }
 
@@ -65,5 +71,7 @@
       $('#UserEmail').html(profile.getEmail())
 
       $('#UserImage').attr('src', profile.getImageUrl())
+
+      $('#profileB').show()
   }
 </script>
