sign out button too

--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -40,7 +40,7 @@
             Profile
           </a>
           <div class="g-signin2" data-onsuccess="onSignIn"></div>
-          <a class='navbar-item' href="#" onclick="signOut();">
+          <a class='navbar-item' href="#" onclick="signOut();" id='signOutB'>
             <strong>Sign Out</strong>
           </a>
         {{!-- </div> --}}
@@ -51,12 +51,14 @@
 
 <script>
   $("#profileB").hide();
+  $("#signOutB").hide();
 
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
     auth2.signOut().then(function () {
       console.log('User signed out.');
       $("#profileB").hide();
+      $("#signOutB").hide();
     });
   }
 
@@ -73,5 +75,6 @@
       $('#UserImage').attr('src', profile.getImageUrl())
 
       $('#profileB').show()
+      $("#signOutB").show();
   }
 </script>
