--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -23,7 +23,7 @@
           <a href="/" class="navbar-item">
             About
           </a>
-          <a href='https://github.com/bitmonst3r/Green-Code' class="navbar-item">
+          <a href='https://github.com/bitmonst3r/Green-Code' target="_blank" rel="noopener noreferrer" class="navbar-item">
             Review Github
           </a>
         </div>
@@ -64,10 +64,10 @@
 
   function onSignIn(googleUser) {
       var profile = googleUser.getBasicProfile();
-      console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-      console.log('Name: ' + profile.getName());
-      console.log('Image URL: ' + profile.getImageUrl());
-      console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+      //console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+      //console.log('Name: ' + profile.getName());
+      //console.log('Image URL: ' + profile.getImageUrl());
+      //console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
 
       $('#UserName').html(profile.getName())
       $('#UserEmail').html(profile.getEmail())
