removed navbar logo, added link to header logo

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -9,7 +9,9 @@
     </head>
     <body> 
         <div  style="text-align:center;"href="/">
-            <img id="img_head" src="\images\logo.png" width="150" height="150">
+            <a href='/'>
+                <img id="img_head" src="\images\logo.png" width="150" height="150">
+            </a>
         </div>
         <div class="home_background" style="text-align:center;"></div>
         <br>
