--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -1,8 +1,8 @@
 <nav class="navbar is-black" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="/">
+    {{!-- <a class="navbar-item" href="/">
       <img src="\images\logo.png" width="50" height="50">
-    </a>
+    </a> --}}
   </div>
 
   <div id="navbarBasicExample" class="navbar-menu">
