--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -5,6 +5,7 @@
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <meta name="google-signin-client_id" content="299497171148-rq9u75899t9ma315tsuur6aiced7romu.apps.googleusercontent.com">
         <link rel='stylesheet' href='/stylesheets/style.css' />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body> 
         <div class="home_background" style="text-align:center;">
@@ -15,7 +16,6 @@
         </div> --}}
 
         </div>
-        <br>
         {{> _nav}}
 
         
