added codelisting button to nav

--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -13,6 +13,9 @@
       <a href="upload" class='navbar-item'>
         Upload Code
       </a>
+      <a href="codeListing" class='navbar-item'>
+        Code Listing
+      </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
