--- a/views/Upload.hbs
+++ b/views/Upload.hbs
@@ -1,11 +1,5 @@
 {{> _header}}
 
-{{!-- <form id="file-upload" action="/code/upload" method="POST" enctype="multipart/form-data">
-    <!-- Redirect browsers with JavaScript disabled to the origin page -->
-   <input type="file" name="sampleFile"/>
-   <input type="submit" value="Add code"> 
-</form>   --}}
-
 <div class="container">
 <form id="file-upload" action="/code/upload" method="POST" enctype="multipart/form-data">
     
@@ -29,7 +23,6 @@
 
             <div class="pulse">
                 <input class="divLink" type="submit" value="Submit"> 
-                {{!-- <p><a class="divLink"  href="/Results" type="submit" value="Add code">UPLOAD</a></p> --}}
             </div>
 </form>
             <script>
@@ -43,6 +36,10 @@
             </script>
 
 </div>
-
+  <div style="position:relative; padding-top:200px;" >
+    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+      <p style="text-align: center; font-size: 25px;">Let's Build A Better Future.</p>
+    </div>
+  </div>
 {{> _footer}}
 
