--- a/views/Results.hbs
+++ b/views/Results.hbs
@@ -1,10 +1,34 @@
 {{> _header}}
 <br><br>
 
-<div class="loading_bar">
-  <h2>LOADING</h2>
-  <progress class="progress is-small is-primary" max="100">15%</progress>
-</div>
+<div class="styled-table">
+  <table id="resultsTable">
+    	<thead>
+			<tr>
+				<th>Submission ID</th>
+				<th>Code Name</th>
+        <th></th>
+        <th></th>
+			</tr>
+		</thead>
+    <tbody>
+      {{#each data}}
+      <tr>
+        <td>{{this.submissionId}}</td>
+        <td>{{this.codeName}}</td>
+        <td><a href="/viewCode/{{this.submissionId}}">View Code</a></td>      
+        <td><a>Download</a></td>
+      </tr>
+      {{/each}}
+    </tbody>
+  </table>
+  </div>
+
+<script>
+$(document).ready(function(){
+    $('#resultsTable').dataTable();
+});
+</script>
 
 <br><br>
 {{> _footer}}
