--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -3,14 +3,21 @@
     <head>
         {{> _bulma}}
         <link rel="stylesheet" href="/stylesheets/style.css">
-        {{!-- <link rel="stylesheet" href="/stylesheets/{{style}}"> --}}
+        <link rel="stylesheet" href="/stylesheets/table.css">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <meta name="google-signin-client_id" content="299497171148-rq9u75899t9ma315tsuur6aiced7romu.apps.googleusercontent.com">
-        {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> --}}
-        {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css"> --}}
+    
+    {{!-- <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">    --}}
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    {{!-- <link rel="stylesheet" href="http://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css"></style> --}}
+    <script type="text/javascript" src="http://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    
     </head>
     <body>
-        <img id="img_head" src="\images\logo.png" width="150" height="150">
+        <div  style="text-align:center;"href="/">
+            <img id="img_head" src="\images\logo.png" width="150" height="150">
+        </div>
+        <div class="home_background" style="text-align:center;"></div>
         <br>
         {{> _nav}}
-        {{!-- <hr style="background:#19ff04"> --}}
