updating css and home

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -4,6 +4,8 @@
         {{> _bulma}}
         <link rel="stylesheet" href="/stylesheets/style.css">
         <link rel="stylesheet" href="/stylesheets/table.css">
+        <link rel="stylesheet" href="/stylesheets/upload.css">
+        <link rel="stylesheet" href="/stylesheets/results.css">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <meta name="google-signin-client_id" content="299497171148-rq9u75899t9ma315tsuur6aiced7romu.apps.googleusercontent.com">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
