--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,61 +30,26 @@ a {
   color: #00B7FF;
 } 
 
-.container{
-  /* position: relative; */
-  margin: auto;
-  background-color: rgb(0, 0, 0, 0.7);
-  width: 750px;
-  height: 500px;
-  top: 100px;
-  border-radius: 1.5em;
-  border-color: rgb(119, 119, 119);
-  border-style: ridge;
+
+.container2{
+
 }
 
-#h1-upload{
-  color: beige;
-  text-align: center;
-  position: absolute;
-  top: 10%;
-  left: 38%;
-  font-size: 33px;
-}
-
-#file-js-example{
-  position: absolute;
-  top: 33%;
-  left: 31%;
-  color: white;
-  font-size: 21px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
 
 a {
   color: skyblue;
 }
 
-.footer{
-  position: static;
-  /* margin-top: 280px; */
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-  background-color: rgb(0, 0, 0, 0.7);
-  color: white;
-  text-align: center;
-}
-
 .home_background {
-   background-image: url(/images/forrest2.jpg);
+   /* background-image: url(/images/forrest2.jpg); */
   /* background-size: cover;
   min-height: 1000px;
   background-repeat: no-repeat; */
 }
 
-.pulse{
-  position: absolute;
-  top: 72%;
+.pulse-home{
+  position: relative;
+  top: 62%;
   top: 78%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -99,8 +64,8 @@ a {
   z-index: 10;
 }
 
-.pulse:before,
-.pulse:after{
+.pulse-home:before,
+.pulse-home:after{
   content: '';
   display: block;
   position: absolute;
@@ -113,7 +78,7 @@ a {
   border-radius: 50%;
   animation: animate 1.5s linear infinite;
 }
-.pulse:after{
+.pulse-home:after{
   animation-delay: .5s;
 }
 @keyframes animate{
@@ -130,25 +95,7 @@ a {
   } 
 }
 
-input.divLink {
-  background-color: #5AEA02;
-  border: none;
-   font-family:Helvetica;
-   font-weight: bold;
-   font-size: 18px;
-   color: white;
-   position: absolute;
-   top: 40%;
-   left: 13%;
-   width: 75%;
-   height: 25%;
-   /* top: 10%; */
-   /* left: 0; */
-   text-decoration: none;
-   z-index: 10;
-   /* raises anchor tag above everything else in div */
-   cursor: pointer;
-}
+
 
 a.divLink {
   font-family:Helvetica;
@@ -164,47 +111,5 @@ a.divLink {
   z-index: 10;
   /* raises anchor tag above everything else in div */
 }
-  
 
-.loading_bar{
-  color: white;
-  text-align: center;
-  margin: auto;
-  position: absolute;
-  top: 55%;
-  left: 25%;
-  width: 50%;
-}
 
-.code-container{
-  margin: auto;
-  width: fit-content;
-  padding: 50px;
-}
-
-.code-box {
-  /* position: relative; */
-  margin: auto;
-  height: fit-content;
-  width: fit-content;
-  /* padding: 100px; */
-  color: blue;
-}
-
-.title-code-box {
-  background-color: rgb(0, 0, 0, 0.3);
-  color: white;
-  font-size: 18px;
-  font-family: 'Courier New', Courier, monospace;
-  display: block;
-  vertical-align: bottom;
-  bottom: 0;
-}
-
-.download-link{
-  padding-top: 5px;
-  text-align: center; 
-  width: 50px; 
-  margin: 0 auto; 
-  font-size: 18px;
-}
