--- a/views/Home.hbs
+++ b/views/Home.hbs
@@ -1,6 +1,6 @@
 {{> _header}}
 
-<div class="home_background" style="text-align:center;padding:100px;color:white;background-repeat:no-repeat" >
+<div class="home_background" style="text-align:center;padding-top:20px;padding-bottom:123px;color:white;background-repeat:no-repeat" >
 
     <div class="hero-body" style="text-align:center;">
         <div class="container2" style="text-align: center;">
@@ -10,21 +10,20 @@
         </div>
     </div>
 
+  <h3 class="title" style="text-align:center;color:white"> Welcome </h3>
+  <h3 class = "title" style="text-align:center;color:white"><strong>Mission</strong></h3>
+  <p style="text-align: center; font-size: 25px; ">Our motivation is to make a connection between computer science and energy usage. Thus why we aim to find new methods to motivate the new generation of Computer Science students to learn and create efficient programs. Such as incorporating something like Big O of Energy into the study of Computer Science. 
+  </p>
 
-<h3 class="title" style="text-align:center;color:white"> Welcome </h3>
-   
-    <h3 class = "title" style="text-align:center;color:white"><strong>Mission</strong></h3>
-    <p style="text-align: center; font-size: 25px; ">Our motivation is to make a connection between computer science and energy usage. Thus why we aim to find new methods to motivate the new generation of Computer Science students to learn and create efficient programs. Such as incorporating something like Big O of Energy into the study of Computer Science. 
-</p>
-  </div>
+</div>
   
-      <div class="pulse">
-      <p><a class="divLink" href="/upload">START</a></p>
-    </div>
-  <div style="position:relative;">
-    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+<div class="pulse-home">
+  <p><a class="divLink" href="/upload">START</a></p>
+</div>
+
+<div style="position:relative;">
+  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
       <p style="text-align: center; font-size: 25px;">Let's Build A Better Future.</p>
-    </div>
   </div>
 </div>
 
