--- a/views/codeListing.hbs
+++ b/views/codeListing.hbs
@@ -1,18 +1,34 @@
 {{> _header}}
+<br><br>
 
-{{#each codes}}
-    {{codes.submissionId}} {{codes.codeName}} {{codes.codestring}} 
-{{/each}}
+<div class="styled-table">
+  <table id="resultsTable">
+    	<thead>
+			<tr>
+				<th>Submission ID</th>
+				<th>Code Name</th>
+        <th></th>
+        <th></th>
+			</tr>
+		</thead>
+    <tbody>
+      {{#each data}}
+      <tr>
+        <td>{{this.submissionId}}</td>
+        <td>{{this.codeName}}</td>
+        <td><a href="/viewCode/{{this.submissionId}}">View Code</a></td>      
+        <td><a>Download</a></td>
+      </tr>
+      {{/each}}
+    </tbody>
+  </table>
+  </div>
 
-<p>aaaaaaaaahhhh</p>
+<script>
+$(document).ready(function(){
+    $('#resultsTable').dataTable();
+});
+</script>
 
-<p>aaaaaaaaahhhh</p>
-<p>aaaaaaaaahhhh</p>
-<p>aaaaaaaaahhhh</p>
-<p>aaaaaaaaahhhh</p>
-<p>aaaaaaaaahhhh</p>
-<p>aaaaaaaaahhhh</p>
-<p>aaaaaaaaahhhh</p>
-
-
+<br><br>
 {{> _footer}}
