--- a/views/viewCode.hbs
+++ b/views/viewCode.hbs
@@ -9,7 +9,7 @@
                 <pre>{{this.codeString}}</pre>  
     </div>
     <div class="download-link">
-        <a href="" download>Download</a>
+        <a href="wget https://green-code.herokuapp.com/code/searchByIdAndExt/{{this.submissionId}}.sql" download>Download</a>
      </div>
 </div>
 {{/each}}
