--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -6,6 +6,8 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <meta name="google-signin-client_id" content="299497171148-rq9u75899t9ma315tsuur6aiced7romu.apps.googleusercontent.com">
         <link rel='stylesheet' href='/stylesheets/style.css' />
+        <link rel='stylesheet' href='/stylesheets/myStyle.sass' />
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body> 
