update Profile to match Home

--- a/views/Profile.hbs
+++ b/views/Profile.hbs
@@ -1,6 +1,6 @@
 {{> _header}}
-
-<div class="box">
+<br>
+<div class="box  has-background-success-light is-size-5">
   <h2 class='title'> Profile </h2>
 
   <article class="media">
@@ -15,8 +15,8 @@
         <p>
           <strong><div id='UserName' class="pl-6">   </div></strong> <small><div id='UserEmail' name='email' class="pl-6">   </div></small>
           <br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
         </p>
+        <p><strong>Bio:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.</p>
       </div>
     </div>
   </article>
