Fixed button position problem

--- a/views/Home.hbs
+++ b/views/Home.hbs
@@ -35,7 +35,7 @@
 
   </div>
 </div>
-    <div class="pulse">
+    <div class="pulse-home">
       <p><a class="divLink" href="/upload">START</a></p>
     </div>
     <br>
