Updates to include json upload and results view page

--- a/views/codeListing.hbs
+++ b/views/codeListing.hbs
@@ -16,7 +16,8 @@
       <tr>
         <td>{{this.submissionId}}</td>
         <td>{{this.codeName}}</td>
-        <td><a href="/viewCode/{{this.submissionId}}">View Code</a></td>      
+        <td><a href="/viewCode/{{this.submissionId}}">View Code</a></td>
+        <td><a href="/results/json/{{this.submissionId}}">View Results</a></td>        
         <td><a href="/code/downloadById/{{this.submissionId}}">Download</a></td>
       </tr>
       {{/each}}
@@ -25,9 +26,9 @@
   </div>
 
 <script>
-$(document).ready(function(){
-    $('#resultsTable').dataTable();
-});
+  $(document).ready(function(){
+      $('#resultsTable').dataTable();
+  });
 </script>
 
 <br><br>
