--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -39,7 +39,7 @@
           <a class='navbar-item'>
             <strong>Sign up</strong>
           </a>
-          <a href="profile" class='navbar-item' id = 'profileB'>
+          <a href="/profile" class='navbar-item' id = 'profileB'>
             Profile
           </a>
           <div class="g-signin2" data-onsuccess="onSignIn"></div>
