Creation of aggregate graphs

--- a/views/codeListing.hbs
+++ b/views/codeListing.hbs
@@ -17,7 +17,7 @@
         <td>{{this.submissionId}}</td>
         <td>{{this.codeName}}</td>
         <td><a href="/viewCode/{{this.submissionId}}">View Code</a></td>
-        <td><a href="/results/json/{{this.submissionId}}">View Results</a></td>        
+        <td><a href="/results/{{this.submissionId}}">View Results</a></td>        
         <td><a href="/code/downloadById/{{this.submissionId}}">Download</a></td>
       </tr>
       {{/each}}
