--- a/views/graphsJson.hbs
+++ b/views/graphsJson.hbs
@@ -1,26 +1,45 @@
 {{> _header}}
-<h2>This is a work in progress</h2>
-<div id="tester" style="width:600px;height:250px;"></div>
+<div id="graphs" class="has-background-black p-5"></div>
 <script>
-	var xArray = [50,60,70,80,90,100,110,120,130,140,150];
-	var yArray = [7,8,8,9,9,9,10,11,14,14,15];
+	const submissinId = window.location.href.match(/(\d+)\D*$/)[0];
+	fetch('/results/json/' + submissinId)
+		.then(res => res.json())
+		.then((data) => {
+			const labels = data.runs[0].measurements.map(measure => measure.label);
+			labels.forEach(label => {
+				createAggregateGraph(data, label);
+			});
+		});
 
-	// Define Data
-	var data = [{
-		x: xArray,
-		y: yArray,
-		mode: "lines",
-		type: "scatter"
-	}];
+	const createAggregateGraph = (data, label) => {
+		const xAxis = data.runs.map(run => run.size);
+		const yAxis = data.runs.map(run => {
+			const measure = run.measurements.find(m => m.label === label);
+			return measure.total || measure.mean;
+		});
 
-	// Define Layout
-	var layout = {
-		xaxis: {range: [40, 160], title: "Square Meters"},
-		yaxis: {range: [5, 16], title: "Price in Millions"},
-		title: "House Prices vs Size"
+		const meta = data.runs[0].measurements.find(m => m.label === label);
+		const unit = meta.unit;
+		const value = meta.mean || meta.total;
+		// Define Data
+		var data = [{
+			x: xAxis,
+			y: yAxis,
+			mode: "lines+markers",
+			type: "scatter"
+		}];
+
+		// Define Layout
+		var layout = {
+			xaxis: {title: 'Sizes'},
+			yaxis: {title: unit},
+			title: label
+		};
+
+		const id = label.replace(' ', '');
+		document.getElementById('graphs').innerHTML += `<div id="${id}" class="m-5 w-100 h-50"></div>`;
+		// Display using Plotly
+		Plotly.newPlot(id, data, layout);
 	};
-
-	// Display using Plotly
-	Plotly.newPlot("tester", data, layout);
 </script>
 {{> _footer}}
