--- a/views/codeListing.hbs
+++ b/views/codeListing.hbs
@@ -9,6 +9,7 @@
 				<th>Code Name</th>
         <th></th>
         <th></th>
+        <th></th>
 			</tr>
 		</thead>
     <tbody>
@@ -17,7 +18,7 @@
         <td>{{this.submissionId}}</td>
         <td>{{this.codeName}}</td>
         <td><a href="/viewCode/{{this.submissionId}}">View Code</a></td>
-        <td><a href="/results/{{this.submissionId}}">View Results</a></td>        
+        <td><a href="/data/{{this.submissionId}}">View Results</a></td>        
         <td><a href="/code/downloadById/{{this.submissionId}}">Download</a></td>
       </tr>
       {{/each}}
