--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -66,7 +66,9 @@
   }
 
   function onSignIn(googleUser) {
-      var profile = googleUser.getBasicProfile();
+      const profile = googleUser.getBasicProfile();
+      console.log(profile);
+      sessionStorage.setItem('profile', profile);
       //console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
       //console.log('Name: ' + profile.getName());
       //console.log('Image URL: ' + profile.getImageUrl());
