Updates to routing and views

--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -16,6 +16,9 @@
       <a href="/codeListing" class='navbar-item'>
         Code Listings
       </a>
+      <a href="/data" class='navbar-item'>
+        Leaderboard
+      </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
